# CI_demo

./: CMakeLists.txt  README.md  main.cpp
include/: person.hpp  utility.hpp
tests/: CMakeLists.txt  test_person.cpp  test_utility.cpp
